[REVISION 20060718]

[FIXED] String test checks #class instead of #klass

[CHANGED] Separated out check for null from validation of numericality. This means you'll get a "xxx can't be blank" rather than an "xx isn't a number" which seems more intuitive to me.

[FIXED] Default check should consider nil explicitly to allow for false.

[REVISION 20060717]

[NEW] Initial version.

[FIXED] Ignore columns ending in: _id, _count, _at, _on.

[NEW] Support validates_numericality_of for numbers (including :integer => true)

[NEW] Support validates_length_of for strings